k8s/deploy.yaml
#####################################
# 2018 ithome ironman
# Author: James Lu
# Topic: k8s 不自賞 - Day 29 邁向 DevOps 之路 (2)
# Url: https://ithelp.ithome.com.tw/articles/10196286
# Licence: MIT
#####################################
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ithome
spec:
  replicas: 1
  template:
    metadata:
      name: ithome
      labels:
        app: ithome
        env: current
    spec:
      containers:
      - name: ithome
        image: gcr.io/ithome-image
        resources:
          limits:
            memory: 0
            cpu: 0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
