k8s/service.yaml
#####################################
# 2018 ithome ironman
# Author: James Lu
# Topic: k8s 不自賞 - Day 29 邁向 DevOps 之路 (2)
# Url: https://ithelp.ithome.com.tw/articles/10196286
# Licence: MIT
#####################################
apiVersion: v1
kind: Service
metadata:
  name: ithome
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
  type: NodePort
  selector:
    app: ithome
    env: current
